--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,19 +1,17 @@
 {% extends "layout.html" %} <!--inherit-->
 
     {% block content %}
-        {% for post in posts %}
         <article class="media content-section">
             <div class="media-body">
               <div class="article-metadata">
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.date }}</small>
               </div>
-              <h2><a class="article-title" href="{{ url_for('post', post_id=1) }}">{{ post.title }}</a></h2> <!--change to post.id later-->
-              <p class="article-content">{{ post.reply }} replies</p>
+              <h2 class="article-title">{{ post.title }}</h2>
+              <p class="article-content">{{ post.content }}</p>
             </div>
           </article>
-        {% endfor %}
         <a href="/post/new" class="btn btn-outline-info" role="button">
-            New Post
+            Comment
         </a>
     {% endblock content %}
