--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -6,10 +6,10 @@
             <div class="media-body">
               <div class="article-metadata">
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date }}</small>
+                <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
               </div>
               <h2><a class="article-title" href="{{ url_for('post', post_id=1) }}">{{ post.title }}</a></h2> <!--change to post.id later-->
-              <p class="article-content">{{ post.reply }} replies</p>
+              <!--<p class="article-content">{{ post.reply }} replies</p>-->
             </div>
           </article>
         {% endfor %}
