--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -8,7 +8,7 @@
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
               </div>
-              <h2><a class="article-title" href="{{ url_for('post', post_id=1) }}">{{ post.title }}</a></h2> <!--change to post.id later-->
+              <h2><a class="article-title" href="{{ url_for('post', post_title=post.title, post_author=post.author, post_time=post.time_posted) }}">{{ post.title }}</a></h2> <!--change to post.id later-->
               <!--<p class="article-content">{{ post.reply }} replies</p>-->
             </div>
           </article>
