--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -5,7 +5,7 @@
             <div class="media-body">
               <div class="article-metadata">
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date }}</small>
+                <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
               </div>
               <h2 class="article-title">{{ post.title }}</h2>
               <p class="article-content">{{ post.content }}</p>
