--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -11,7 +11,45 @@
               <p class="article-content">{{ post.content }}</p>
             </div>
           </article>
-        <a href="/post/new" class="btn btn-outline-info" role="button">
+        <a href="/post/new" class="btn btn-outline-info mb-4" role="button">
             Comment
         </a>
+
+        <!--comment textarea-->
+        <div class="content-section">
+          <form method="POST", action="">
+              {{ form.hidden_tag() }} 
+              <fieldset class="form-group">   <!--group a set of elements-->
+                  <legend>New Comment</legend>   
+                  <div class="form-group">  <!--content-->
+                      {% if form.content.errors %}
+                          {{ form.content(class="form-control form-control-lg") }}
+                          <div class="invalid-feedback">
+                              {% for error in form.content.errors%}
+                                  <span>{error}</span>
+                              {% endfor%}
+                          </div>
+                      {% else %}
+                          {{ form.content(class="form-control form-control-lg") }}
+                      {% endif %}
+                  </div>
+                  <div class="form-group">    <!--submit button-->
+                      {{ form.submit(class="btn btn-outline-info") }}
+                  </div>
+              </fieldset>
+          </form>
+      </div>
+        
+        <!--comment-->
+        <article class="media content-section">
+          <div class="media-body">
+            <div class="article-metadata">
+              <a class="article-author mr-2" href="#">{{ post.author }}</a>
+              <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
+            </div>
+            <p class="article-content">{{ post.content }}</p>
+          </div>
+        </article>
+
+
     {% endblock content %}
