--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -39,15 +39,17 @@
       </div>
         
         <!--comment-->
+        {% for comment in comments %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="article-author mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
+              <a class="article-author mr-2" href="#">{{ comment.author }}</a>
+              <small class="text-muted">{{ comment.time_commented.strftime('%Y-%m-%d') }}</small>
             </div>
-            <p class="article-content">{{ post.content }}</p>
+            <p class="article-content">{{ comment.content }}</p>
           </div>
         </article>
+        {% endfor %}
 
         <a href="#comment-area" class="btn btn-outline-info mb-4" role="button" data-toggle="collapse">
           Comment
