--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -6,6 +6,13 @@
               <div class="article-metadata">
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
+                <!--need to verify the user-->
+                <div>
+                  <form action="{{ url_for('delete_post', post_title=post.title, post_author=post.author, post_time=post.time_posted) }}" method="POST">
+                    <input type="submit" class="btn btn-danger btn-sm mt-1 mb-1" value="Delete">
+                  </form>
+                </div>
+
               </div>
               <h2 class="article-title">{{ post.title }}</h2>
               <p class="article-content">{{ post.content }}</p>
