slight change on about page

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %} <!--inherit-->
 {% block content %}
+    <h1>Welcome!</h1>
     <p>This is the About Page</p>
 {% endblock content %}
