added text to about page

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,5 +1,19 @@
 {% extends "layout.html" %} <!--inherit-->
 {% block content %}
     <h1>Welcome!</h1>
-    <p>This is the About Page</p>
+    <br>
+    <div class="about-content">
+        <p>Learn Chinese Together is an application for students to learn the Mandarin Chinese language. 
+            Students will be able to do fun learning activities that help them understand Mandarin Chinese from an English perspective. 
+        </p>
+        <p>
+            A feature to this application that will be heavily emphasized will be the interaction between students. 
+            In order to progress through the lessons in the application, 
+            students will have sessions where they need to interact with other students using the application in Mandarin. 
+            These directed conversations will better help students gain Mandarin Chinese fluency. 
+            In addition to this, there will also be forums available for students to ask questions and discuss topics related to the Mandarin language.
+        </p>
+    </div>
+
+
 {% endblock content %}
