added comment deletion; changed some styles

--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -9,7 +9,7 @@
                 <!--need to verify the user-->
                 <div>
                   <form action="{{ url_for('delete_post', post_title=post.title, post_author=post.author, post_time=post.time_posted) }}" method="POST">
-                    <input type="submit" class="btn btn-danger btn-sm mt-1 mb-1" value="Delete">
+                    <input type="submit" class="btn btn-outline-primary btn-sm mt-1 mb-1" value="Delete">
                   </form>
                 </div>
 
@@ -25,17 +25,17 @@
           <form method="POST", action="">
               {{ form.hidden_tag() }} 
               <fieldset class="form-group">   <!--group a set of elements-->
-                  <legend>New Comment</legend>   
+                  <legend><h4>New Comment</h4></legend>   
                   <div class="form-group">  <!--content-->
                       {% if form.content.errors %}
-                          {{ form.content(class="form-control form-control-lg") }}
+                          {{ form.content(class="form-control form-control-sm") }}
                           <div class="invalid-feedback">
                               {% for error in form.content.errors%}
                                   <span>{error}</span>
                               {% endfor%}
                           </div>
                       {% else %}
-                          {{ form.content(class="form-control form-control-lg") }}
+                          {{ form.content(class="form-control form-control-sm") }}
                       {% endif %}
                   </div>
                   <div class="form-group">    <!--submit button-->
@@ -52,6 +52,10 @@
             <div class="article-metadata">
               <a class="article-author mr-2" href="#">{{ comment.author }}</a>
               <small class="text-muted">{{ comment.time_commented.strftime('%Y-%m-%d') }}</small>
+                <!--delete btn-->
+                <form action="{{ url_for('delete_comment',  post_title=post.title, post_author=post.author, post_time=post.time_posted, comment_author=comment.author, comment_time=comment.time_commented) }}" method="POST">
+                  <input type="submit" class="btn btn-outline-secondary btn-sm mt-1 mb-1" value="Delete">
+                </form>
             </div>
             <p class="article-content">{{ comment.content }}</p>
           </div>
