--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -7,12 +7,13 @@
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
                 <!--need to verify the user-->
+                {% if post.author == cur_user %}
                 <div>
                   <form action="{{ url_for('delete_post', post_title=post.title, post_author=post.author, post_time=post.time_posted) }}" method="POST">
                     <input type="submit" class="btn btn-outline-primary btn-sm mt-1 mb-1" value="Delete">
                   </form>
                 </div>
-
+                {% endif %}
               </div>
               <h2 class="article-title">{{ post.title }}</h2>
               <p class="article-content">{{ post.content }}</p>
@@ -53,9 +54,11 @@
               <a class="article-author mr-2" href="#">{{ comment.author }}</a>
               <small class="text-muted">{{ comment.time_commented.strftime('%Y-%m-%d') }}</small>
                 <!--delete btn-->
+                {% if comment.author == cur_user%}
                 <form action="{{ url_for('delete_comment',  post_title=post.title, post_author=post.author, post_time=post.time_posted, comment_author=comment.author, comment_time=comment.time_commented) }}" method="POST">
                   <input type="submit" class="btn btn-outline-secondary btn-sm mt-1 mb-1" value="Delete">
                 </form>
+                {% endif %}
             </div>
             <p class="article-content">{{ comment.content }}</p>
           </div>
