--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -5,7 +5,7 @@
             <div class="media-body">
               <div class="article-metadata">
                 <a class="article-author mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d') }}</small>
+                <small class="text-muted">{{ post.time_posted.strftime('%Y-%m-%d %H:%M:%S') }}</small>
                 <!--need to verify the user-->
                 {% if post.author == cur_user %}
                 <div>
@@ -52,7 +52,7 @@
           <div class="media-body">
             <div class="article-metadata">
               <a class="article-author mr-2" href="#">{{ comment.author }}</a>
-              <small class="text-muted">{{ comment.time_commented.strftime('%Y-%m-%d') }}</small>
+              <small class="text-muted">{{ comment.time_commented.strftime('%Y-%m-%d %H:%M:%S') }}</small>
                 <!--delete btn-->
                 {% if comment.author == cur_user%}
                 <form action="{{ url_for('delete_comment',  post_title=post.title, post_author=post.author, post_time=post.time_posted, comment_author=comment.author, comment_time=comment.time_commented) }}" method="POST">
